--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,6 +9,12 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
+    text-align: center;
+}
+
+#logo img {
+    height: auto;
+    text-align: center;
 }
 
 .menu li a:hover {
@@ -89,4 +95,15 @@ footer {
     position: absolute;
     width: 100%;
     bottom: 0;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+
+}
+
+footer a:hover {
+    color: rgb(222, 10, 10);
+    transform: scale(1.1);
 }
