--- a/Styles/style.css
+++ b/Styles/style.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 header {
@@ -12,9 +13,26 @@ header {
     text-align: center;
 }
 
+.container {
+    max-width: 1550px;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+
+}
+
 #logo img {
     height: auto;
     text-align: center;
+}
+
+main {
+    max-width: 900px;
+    padding: 100px 80px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+   
 }
 
 .menu li a:hover {
@@ -92,7 +110,6 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: absolute;
     width: 100%;
     bottom: 0;
 }
