--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,24 +1,29 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #222;
+    color: #fff;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
     
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+.container {
+    width: 100%;
+    max-width: 1500px;
+    background: #333;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.container {
-    max-width: 1550px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-
+header {
+    background-image: url(../images/pexels-mitja-juraja-357365-970517.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 10px 0;
+    text-align: center;
 }
 
 #logo img {
@@ -26,13 +31,14 @@ header {
     text-align: center;
 }
 
-main {
-    max-width: 900px;
-    padding: 100px 80px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-   
+
+h2 {
+    text-align: center;
+    color: rgb(222, 10, 10);
+}
+
+h3 {
+    text-align: center;
 }
 
 .menu li a:hover {
@@ -104,9 +110,61 @@ nav ul li a {
     text-decoration: none;
 }
 
+main {
+    padding: 20px;
+    
+}
+
+.about-section {
+    background-color: #222;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 20px auto;
+    max-width: 800px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+.about-section h2 {
+    margin-bottom: 20px;
+}
+.about-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.about-content p {
+    margin: 0;
+    line-height: 1.6;
+}
+.about-content img {
+    border-radius: 10px;
+    max-width: 25%;
+    height: auto;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.vision-mission {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+.vision-mission div {
+    background-color: #333;
+    padding: 20px;
+    border-radius: 10px;
+    flex: 1;
+    min-width: 200px;
+    transition: transform 0.3s;
+}
+.vision-mission div:hover {
+    transform: scale(1.05);
+
+}
 
 footer {
     background-color: #333;
+    background-image: url(../images/pexels-mitja-juraja-357365-970517.jpg);
     color: #fff;
     text-align: center;
     padding: 10px 0;
