--- a/Styles/AboutUs.css
+++ b/Styles/AboutUs.css
@@ -35,8 +35,8 @@
     color: #bbb;
 }
 
+
 .about-us{
-    max-width: 900px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -50,130 +50,105 @@
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#About {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* Timeline container */
+.timeline-item {
+  display: flex;
+  align-items: center;
+  padding: 20px 0;
+  position: relative;
+  width: 100%;
+}
+
+/* Alternate timeline sides */
+.timeline-item.left .about-us {
+  order: 1;
+}
+
+.timeline-item.left .image-box {
+  order: 2;
+  padding-left: 20px;
+}
+
+.timeline-item.right .about-us {
+  order: 2;
+}
+
+.timeline-item.right .image-box {
+  order: 1;
+  padding-right: 20px;
+}
+
+/* Content and image styling */
+.about-us, .image-box {
+  flex: 1;
+  padding: 10px;
+}
+
+/* Styling for images */
+.image-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-box img {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 6px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+/* Vertical line for the timeline */
+.timeline-item::before {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: #333;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* Circle for each timeline item */
+.timeline-item::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  background-color: white;
+  border: 4px solid rgb(222, 10, 10);
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+  .timeline-item {
+      flex-direction: column;
   }
-  
-  /* The actual timeline (the vertical ruler) */
-  #About {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
+
+  .timeline-item.left .image-box, .timeline-item.right .image-box {
+      padding: 0;
   }
-  
-  /* The actual timeline (the vertical ruler) */
-  #About::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: #333;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
+
+  .timeline-item::before {
+      display: none;
   }
-  
-  /* Container around content */
-  .container {
-    padding: 10px 40px;
-    position: relative;
-    background-color: inherit;
-    width: 50%;
+
+  .timeline-item::after {
+      display: none;
   }
-  
-  /* The circles on the timeline */
-  .container::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
-    background-color: #333;
-    border: 4px solid rgb(222, 10, 10);
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
-  }
-  
-  /* Place the container to the left */
-  .left {
-    left: 0;
-  }
-  
-  /* Place the container to the right */
-  .right {
-    left: 50%;
-  }
-  
-  /* Add arrows to the left container (pointing right) */
-  .left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-  }
-  
-  /* Add arrows to the right container (pointing left) */
-  .right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-  
-  /* Fix the circle for containers on the right side */
-  .right::after {
-    left: -16px;
-  }
-  
-  /* The actual content */
-  .about-us {
-    padding: 20px 30px;
-    background-color: #333;
-    position: relative;
-    border-radius: 6px;
-  }
-  
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-    #About::after {
-      left: 31px;
-    }
-  
-  /* Full-width containers */
-    .container {
-      width: 100%;
-      padding-left: 70px;
-      padding-right: 25px;
-    }
-  
-  /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-      left: 60px;
-      border: medium solid white;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
-    }
-  
-  /* Make sure all circles are at the same spot */
-    .left::after, .right::after {
-      left: 15px;
-    }
-  
-  /* Make all right containers behave like the left ones */
-    .right {
-      left: 0%;
-    }
-  }
+}
