--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     justify-content: center;
     align-items: center;
+    cursor: url(http://www.rw-designer.com/cursor-extern.php?id=179382), auto;
     
 }
 
