--- a/Styles/forum.css
+++ b/Styles/forum.css
@@ -7,6 +7,11 @@ main {
    
 }
 
+main img {
+  width: 100%;;
+
+}
+
 .forum {
     background-color: #222;
     color: #fff;
@@ -15,6 +20,7 @@ main {
     justify-content: center;
     align-items: center;
 }
+
 
 h1 {
     text-align: center;
@@ -50,7 +56,8 @@ button {
 }
 
 button:hover {
-    background: #e5533d;
+    color: #fff;
+    transform: scale(1.1);
 }
 
 .posts .post {
