--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,305 +1,314 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #000000;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
-    
+  font-family: Arial, sans-serif;
+  background-color: #000000;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .container {
-    width: 100%;
-    max-width: 1500px;
-    background: #333;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(214, 214, 214, 0.599);
-   
+  width: 100%;
+  max-width: 1500px;
+  background: #333;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(214, 214, 214, 0.599);
+
 }
 
 header {
-    background-image: url(../images/pexels-mitja-juraja-357365-970517.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    padding: 10px 0;
-    text-align: center;
+  background-image: url(../images/pexels-mitja-juraja-357365-970517.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  padding: 10px 0;
+  text-align: center;
 }
 
 #logo img {
-    height: auto;
-    text-align: center;
- 
-    
+  height: auto;
+  text-align: center;
+
+
 }
 
 
 h2 {
-    text-align: center;
-    color: rgb(222, 10, 10);
+  text-align: center;
+  color: rgb(222, 10, 10);
 }
 
 h3 {
-    text-align: center;
+  text-align: center;
 }
 
 .menu li a:hover {
-    color: rgb(222, 10, 10);
-    transform: scale(1.1);
+  color: rgb(222, 10, 10);
+  transform: scale(1.1);
 }
 
 .hamburger-menu {
-    display: none;
+  display: none;
 }
 
 /* Style the bars */
 .bar {
-    width: 25px;
-    height: 3px;
-    background-color: rgb(222, 10, 10);;
-    margin: 5px 0;
+  width: 25px;
+  height: 3px;
+  background-color: rgb(222, 10, 10);
+  ;
+  margin: 5px 0;
 }
 
 .menu a {
-    text-decoration: none;
-    font-size: 1.2rem;
-    color: rgb(255, 255, 255);
-    padding: 1rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: rgb(255, 255, 255);
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 
 .menu li {
-    margin-right: 20px;
-    list-style: none;
-    padding: 0;
-    display: inline-block;
+  margin-right: 20px;
+  list-style: none;
+  padding: 0;
+  display: inline-block;
 }
 
 /* Media query to show/hide the hamburger menu */
 @media (max-width: 768px) {
-    .hamburger-menu {
-        display: block;
-        cursor: pointer;
-    }
+  .hamburger-menu {
+    display: block;
+    cursor: pointer;
+  }
 
-    .menu {
-        display: none;
-        flex-direction: column;
-    }
+  .menu {
+    display: none;
+    flex-direction: column;
+  }
 
-    .menu.active {
-        display: flex;
-    }
+  .menu.active {
+    display: flex;
+  }
 }
 
 nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 0;
 }
 
 nav ul li {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 
 nav ul li a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 main {
-    padding: 20px;
-    text-align: justify;
-    
+  padding: 20px;
+  text-align: justify;
+
 }
 
 .about-section {
-    background-color: #222;
-    border-radius: 10px;
-    padding: 30px;
-    margin: 20px auto;
-    max-width: 800px;
-    box-shadow: 0 4px 8px rgba(214, 214, 214, 0.599);
+  background-color: #222;
+  border-radius: 10px;
+  padding: 30px;
+  margin: 20px auto;
+  max-width: 800px;
+  box-shadow: 0 4px 8px rgba(214, 214, 214, 0.599);
 }
+
 .about-section h2 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .about-content {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
+
 .about-content p {
-    margin: 0;
-    line-height: 1.6;
+  margin: 0;
+  line-height: 1.6;
 }
+
 .about-content img {
-    border-radius: 10px;
-    max-width: 25%;
-    height: auto;
-    margin-bottom: 20px;
-    text-align: center;
+  border-radius: 10px;
+  max-width: 25%;
+  height: auto;
+  margin-bottom: 20px;
+  text-align: center;
 }
+
 .vision-mission {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
 }
+
 .vision-mission div {
-    background-color: #333;
-    padding: 20px;
-    border-radius: 10px;
-    flex: 1;
-    min-width: 200px;
-    transition: transform 0.3s;
+  background-color: #333;
+  padding: 20px;
+  border-radius: 10px;
+  flex: 1;
+  min-width: 200px;
+  transition: transform 0.3s;
 }
+
 .vision-mission div:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 
 }
 
 div.gallery {
-    border: 1px solid #ccc;
-  }
+  border: 1px solid #ccc;
   
-  div.gallery:hover {
-    border: 1px solid #777;
-  }
-  
-  div.gallery img {
-    width: 100%;
-    height: auto;
-  }
-  
-  div.desc {
-    padding: 15px;
-    text-align: center;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.description {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
   .responsive {
-    padding: 0 6px;
-    float: left;
-    width: 24.99999%;
+    width: 49.99999%;
+    margin: 6px 0;
   }
-  
-  @media only screen and (max-width: 700px) {
-    .responsive {
-      width: 49.99999%;
-      margin: 6px 0;
-    }
-  }
-  
-  @media only screen and (max-width: 500px) {
-    .responsive {
-      width: 100%;
-    }
-  }
-  
-  .clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+}
 
-  #myVideo{
-    box-shadow: 0 4px 8px rgb(222, 10, 10);
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
 
-  }
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
-  .button {
-    border-radius: 4px;
-    background-color: rgb(222, 10, 10);
-    border: none;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
+#myVideo {
+  box-shadow: 0 4px 8px rgb(222, 10, 10);
 
-   
-  }
-  
-  .button a {
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-    text-decoration: none;
+}
 
-  }
-  
-  .button a:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  
-  .button:hover a {
-    padding-right: 25px;
-  }
-  
-  .button:hover a:after {
-    opacity: 1;
-    right: 0;
-  }
+.button {
+  border-radius: 4px;
+  background-color: rgb(222, 10, 10);
+  border: none;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 
-  #myBottonTop {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: rgb(222, 10, 10);
-    color: white;
-    cursor: pointer; 
-    padding: 15px; 
-    border-radius: 10px;
-    font-size: 18px; 
-  }
-  
-  #myBottonTop:hover {
-    background-color: #333;
-    transition: 0.5s;
-  }
-  
+
+}
+
+.button a {
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+  text-decoration: none;
+
+}
+
+.button a:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover a {
+  padding-right: 25px;
+}
+
+.button:hover a:after {
+  opacity: 1;
+  right: 0;
+}
+
+#myBottonTop {
+  display: none;
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99;/* Make sure it does not overlap */
+  border: none;
+  outline: none;
+  background-color: rgb(222, 10, 10);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+#myBottonTop:hover {
+  background-color: #333;
+  transition: 0.5s;
+}
+
 
 footer {
-    background-color: #333;
-    background-image: url(../images/pexels-mitja-juraja-357365-970517.jpg);
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    width: 100%;
-    bottom: 0;
+  background-color: #333;
+  background-image: url(../images/pexels-mitja-juraja-357365-970517.jpg);
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+  bottom: 0;
 }
 
 footer a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 
 }
 
 footer a:hover {
-    color: rgb(222, 10, 10);
-    transform: scale(1.1);
+  color: rgb(222, 10, 10);
+  transform: scale(1.1);
 }
