--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -1,10 +1,17 @@
 body {
     font-family: Arial, sans-serif;
     display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+#container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
 }
 
 .gallery {
@@ -12,6 +19,7 @@ body {
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .gallery-item {
@@ -50,4 +58,15 @@ body {
     max-height: 90%;
     border: 5px solid #fff;
     border-radius: 10px;
+}
+
+.content {
+    padding: 1rem;
+}
+
+h1 {
+    text-align: center;
+    margin: 0;
+    margin-bottom: 20px;
+    color: rgb(222, 10, 10);
 }
