--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -12,6 +12,20 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+}
+
+header, footer {
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+}
+
+footer {
+    margin-top: auto;
 }
 
 .gallery {
@@ -62,6 +76,7 @@ body {
 
 .content {
     padding: 1rem;
+    width: 100%;
 }
 
 h1 {
