--- a/Styles/forum.css
+++ b/Styles/forum.css
@@ -4,11 +4,12 @@ main {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-   
+
 }
 
 main img {
-  width: 100%;;
+    width: 100%;
+    ;
 
 }
 
