--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -6,13 +6,13 @@ body {
     margin: 0;
 }
 
-#container {
+.content {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 70%;
 }
 
 header, footer {
