--- a/Styles/events.css
+++ b/Styles/events.css
@@ -5,15 +5,6 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    color: #333;
-}
-
-main {
-    padding: 20px;
-}
 
 section#events {
     max-width: 800px;
@@ -27,26 +18,28 @@ h2 {
 }
 
 .event {
-    background: #fff;
-    border: 1px solid #ddd;
+ 
+    background-color: #333;
     border-radius: 5px;
     padding: 15px;
     margin-bottom: 20px;
+    color: white;
+    box-shadow: 0 4px 8px rgba(214, 214, 214, 0.599);
 }
 
 .event h3 {
     margin-bottom: 10px;
-    color: #333;
+ 
 }
 
 .date {
     font-weight: bold;
-    color: #666;
+  
 }
 
 .location {
     font-style: italic;
-    color: #999;
+
 }
 
 .description {
