--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -4,4 +4,12 @@
 
 .form-error {
     color: red;
+    text-align: center; 
+}
+
+.content {
+    margin: 0 auto; 
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
 }
