--- a/Styles/quiz.css
+++ b/Styles/quiz.css
@@ -1,32 +1,14 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-}
-
-.content {
+.quiz {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 70%;
-}
-
-header, footer {
     width: 100%;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: relative;
+    box-shadow: 0 4px 8px rgb(222, 10, 10);
+    padding: 20px;
 }
 
-footer {
-    margin-top: auto;
-}
 
 .gallery {
     display: flex;
@@ -40,7 +22,7 @@ footer {
     width: 200px;
     height: 200px;
     overflow: hidden;
-    border: 2px solid #ddd;
+    border: 2px solid rgb(222, 10, 10);
     border-radius: 10px;
     transition: transform 0.2s;
 }
@@ -61,7 +43,6 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,14 +51,11 @@ footer {
 .full-img {
     max-width: 90%;
     max-height: 90%;
-    border: 5px solid #fff;
+    border: 5px solid rgb(222, 10, 10);
     border-radius: 10px;
 }
 
-.content {
-    padding: 1rem;
-    width: 100%;
-}
+
 
 h1 {
     text-align: center;
