--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -1,15 +1,181 @@
-.form-input {
-    display: block;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.form-error {
-    color: red;
-    text-align: center; 
+body {
+    font-family: Arial, sans-serif;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    background-color: #222;
+    padding: 20px;
+    color: white;
+}
+
+#logo img {
+    max-width: 100px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar .menu {
+    list-style: none;
+    display: flex;
+}
+
+.navbar .menu li {
+    margin: 0 10px;
+}
+
+.navbar .menu li a {
+    color: white;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+}
+
+.navbar .menu li a:hover {
+    background-color: #555;
+}
+
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.hamburger-menu .bar {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 3px 0;
+}
+
+.flex-container {
+    display: flex;
+    padding: 20px;
 }
 
 .content {
-    margin: 0 auto; 
+    flex: 1;
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
+    justify-content: space-between;
+}
+
+main {
+    flex: 3;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+aside {
+    flex: 1;
+    margin-right: 20px;
+}
+
+#map {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+#map img {
+    max-width: 100%;
+    border-radius: 8px;
+}
+
+section#events {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+h2 {
+    margin-bottom: 20px;
+    font-size: 2em;
+    text-align: center;
+}
+
+.event {
+    background-color: #333;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 20px;
+    color: white;
+    box-shadow: 0 4px 8px rgba(214, 214, 214, 0.599);
+}
+
+.event h3 {
+    margin-bottom: 10px;
+}
+
+.date {
+    font-weight: bold;
+}
+
+.location {
+    font-style: italic;
+}
+
+.description {
+    margin-top: 10px;
+}
+
+footer {
+    background-color: #222;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
+#contact-devs a{
+  text-decoration: none;
+  color: white;
+}
+
+#contact-devs a:hover {
+  color: rgb(222, 10, 10);
+}
+
+.custom-btn {
+  background-color: red;
+  border-color: red;
+}
+
+.custom-btn:hover {
+  background-color: darkred;
+  border-color: darkred;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 450px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+#contact-devs .card {
+  margin-bottom: 40px;
+}
+
+#contact-devs {
+  flex: 0 0 250px;
+  margin-left: 40px;
+  margin-right: 20px;
 }
