--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -1,6 +1,4 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
@@ -57,6 +55,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgb(222, 10, 10);
 }
 
 .flip-card-inner {
@@ -89,6 +88,7 @@
     background-color: rgb(32, 32, 33);
     color: white;
     transform: rotateY(180deg);
+    padding-top: 120px;
 }
 
 .flip-card-front img {
@@ -102,8 +102,8 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    background: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background: #333;
+    box-shadow: 0 4px 8px rgb(222, 10, 10);
     border-radius: 8px;
 }
 
