--- a/Styles/top.css
+++ b/Styles/top.css
@@ -1,32 +1,3 @@
-/*defining Star rating*/
-
-.star-rating {
-    direction: rtl;
-    display: inline-flex;
-  }
-  
-  .star-rating input[type="radio"] {
-    display: none;
-  }
-  
-  .star-rating label {
-    font-size: 2rem;
-    color: #ddd;
-    cursor: pointer;
-  }
-  
-  .star-rating input[type="radio"]:checked ~ label {
-    color: #f5b301;
-  }
-  
-  .star-rating label:hover,
-  .star-rating label:hover ~ label {
-    color: #f5b301;
-  }
-  
-  .star-rating input[type="radio"]:focus:not(:checked) ~ label {
-    color: #ddd;
-  }
   
   /*creating a video icon*/
   /* Styles for image and video icon placement */
@@ -70,3 +41,38 @@
     width: 100%;
     box-shadow: 0 4px 8px rgb(222, 10, 10);
    }
+
+   .stars span {
+    font-size: 24px;
+    cursor: pointer;
+    color: #ddd;
+}
+.stars .checked {
+    color: gold;
+}
+.row {
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+}
+.side, .side.right {
+    flex: 1;
+}
+.middle {
+    flex: 3;
+}
+.bar-container {
+    width: 100%;
+    background-color: #f1f1f1;
+    border-radius: 25px;
+}
+.bar-star {
+    height: 18px;
+    border-radius: 25px;
+}
+.bar-5 { background-color: #8B0000; }  
+.bar-4 { background-color: #4C1C1C; }  
+.bar-3 { background-color: #2E2E2E; } 
+.bar-2 { background-color: #556B2F; } 
+.bar-1 { background-color: #8B4513; }  
+
