--- a/Styles/top.css
+++ b/Styles/top.css
@@ -4,7 +4,7 @@
   .image-container {
     display: flex;
     align-items: center;
-    margin-bottom: 20px; /* Add some margin for spacing between sections */
+    margin-bottom: 20px; 
   }
   
   .image-container img {
@@ -75,4 +75,28 @@
 .bar-3 { background-color: #2E2E2E; } 
 .bar-2 { background-color: #556B2F; } 
 .bar-1 { background-color: #8B4513; }  
+/*Emojis*/
+.horror-rating {
+  display: flex;
+  align-items: left;
+  width: 300px;
+  margin: 5px;
+}
+.horror-rating h5{
+text-align: end;
+}
+.horror-rating input[type="radio"] {
+  display: none;
+}
+.horror-rating label {
+  font-size: 2rem;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+.horror-rating input[type="radio"]:checked + label {
+  transform: scale(1.3);
+}
+.horror-rating input[type="radio"]:focus + label {
+  outline: 2px solid #ddd;
+}
 
